Fix IDE errors/warnings